--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 baseURL = 'https://myangw.github.io/'
-title = 'Myang Tech Blog'
+title = 'Myanglog'
 theme = 'PaperMod'
 
 # Default language (English)
@@ -25,11 +25,6 @@ defaultContentLanguageInSubdir = true
       url = '/en/tags/'
       weight = 2
 
-    [[languages.en.menu.main]]
-      name = '한국어'
-      url = '/ko/'
-      weight = 3
-
   [languages.ko]
     languageName = '한국어'
     weight = 2
@@ -48,11 +43,6 @@ defaultContentLanguageInSubdir = true
       url = '/ko/tags/'
       weight = 2
 
-    [[languages.ko.menu.main]]
-      name = 'English'
-      url = '/en/'
-      weight = 3
-
 [params]
   ShowReadingTime = true
   ShowShareButtons = true
@@ -69,10 +59,7 @@ defaultContentLanguageInSubdir = true
   hideSummary = false
   showtoc = true
   tocopen = true
-
-  [params.homeInfoParams]
-    Title = "Myang's Tech Blog"
-    Content = "Welcome to my tech blog! I write about software engineering, backend development, databases, and more."
+  mainSections = ['posts']
 
 [markup]
   [markup.goldmark]
