--- a/hugo.toml
+++ b/hugo.toml
@@ -52,7 +52,7 @@ defaultContentLanguageInSubdir = true
   ShowWordCount = true
   ShowRssButtonInSectionTermList = true
   UseHugoToc = true
-  disableSpecial1stPost = false
+  disableSpecial1stPost = true
   disableScrollToTop = false
   comments = false
   hidemeta = false
