--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,11 @@
 baseURL = 'https://myangw.github.io/'
 title = 'Myanglog'
 theme = 'PaperMod'
+enableRobotsTXT = true
+enableGitInfo = true
+
+# Google Analytics
+googleAnalytics = 'G-XXXXXXXXXX'  # Replace with your GA4 measurement ID
 
 # Default language (English)
 defaultContentLanguage = 'en'
@@ -60,7 +65,7 @@ defaultContentLanguageInSubdir = true
   ShowBreadCrumbs = true
   ShowCodeCopyButtons = true
   ShowWordCount = true
-  ShowRssButtonInSectionTermList = false 
+  ShowRssButtonInSectionTermList = false
   UseHugoToc = true
   disableSpecial1stPost = true
   disableScrollToTop = false
@@ -70,6 +75,14 @@ defaultContentLanguageInSubdir = true
   showtoc = true
   tocopen = true
   mainSections = ['posts']
+
+  # SEO
+  env = 'production'
+  author = 'Mihyang Gu'
+  keywords = ['backend', 'software engineering', 'java', 'kotlin', 'spring', 'architecture']
+
+  [params.analytics]
+    google = 'G-XXXXXXXXXX'  # Replace with your GA4 measurement ID
 
 [markup]
   [markup.goldmark]
