--- a/hugo.toml
+++ b/hugo.toml
@@ -5,7 +5,7 @@ enableRobotsTXT = true
 enableGitInfo = true
 
 # Google Analytics
-googleAnalytics = 'G-XXXXXXXXXX'  # Replace with your GA4 measurement ID
+googleAnalytics = 'G-WR4FNTG1CT'  # Replace with your GA4 measurement ID
 
 # Default language (English)
 defaultContentLanguage = 'en'
@@ -82,7 +82,7 @@ defaultContentLanguageInSubdir = true
   keywords = ['backend', 'software engineering', 'java', 'kotlin', 'spring', 'architecture']
 
   [params.analytics]
-    google = 'G-XXXXXXXXXX'  # Replace with your GA4 measurement ID
+    google = 'G-WR4FNTG1CT'  # Replace with your GA4 measurement ID
 
 [markup]
   [markup.goldmark]
